Revision history for BSON

{{$NEXT}}

v1.2.1    2016-10-24 20:56:51-04:00 America/New_York

    [Fixed]

    - Detects (and throws error) during encoding for non-container types

    - Fix BSON::Time for 32-bit Perls

    [Changed]

    - Switch to BSON::XS for optimized OID generation if available

    - Always stringify plain scalars as a last resort in encoding

    [Testing]

    - Add test module to reset environment and hide XS

v1.2.0    2016-08-17 15:51:50-04:00 America/New_York

    [Added]

    - Added dt_type support for Mango::BSON::Time

    - Added 'from_epoch' constructor method to BSON::OID

    [Documentation]

    - Credited Sebastian Riedel for inspiration regarding helper functions

    - Hash::Ordered is not yet supported

v1.0.0    2016-07-06 12:39:38-04:00 America/New_York

    [!!! Incompatible Changes !!!]

    - Internal representation of BSON::Bool changed to make it a subclass
      of boolean.pm for conistency with other "boolean" type classes on
      CPAN.

    - All BSON type wrapper classes are now immutable; accessors have
      been changed to read-only.

    [*** Deprecations ***]

    - BSON::Binary deprecated in favor of the new BSON::Bytes module.

    - BSON::Bool deprecated in favor of direct use of boolean.pm.

    - BSON::ObjectID deprecated in favor of the new BSON::OID module.

    - The 'ixhash' option is deprecated in favor of 'ordered' and the
      resulting tied object is no longer guaranteed to be Tie::IxHash.
      This will allow future optimization, as Tie::IxHash is extremely
      slow.

    [API]

    - BSON module is now object-oriented, with an API and options directly
      compatible with the MongoDB driver.  Options set as constructor
      attributes apply to all encoding/decoding, unless options given to methods
      override them.

    - Added a method for inflation of MongoDB's extended JSON format to
      BSON type wrapper objects.

    [BSON types]
