@@ -22,7 +22,6 @@ my %WriteMakefileArgs = (
     "Exporter" => 0,
     "MIME::Base64" => 0,
     "Math::BigInt" => 0,
-    "Module::Runtime" => 0,
     "Moo" => "2.002004",
     "Scalar::Util" => 0,
     "Sys::Hostname" => 0,
@@ -70,7 +69,6 @@ my %FallbackPrereqs = (
   "JSON::MaybeXS" => 0,
   "MIME::Base64" => 0,
   "Math::BigInt" => 0,
-  "Module::Runtime" => 0,
   "Moo" => "2.002004",
   "Path::Tiny" => "0.054",
   "Scalar::Util" => 0,
