@@ -2,6 +2,11 @@ Revision history for BSON
 
 {{$NEXT}}
 
+    [Changed]
+
+    - Removed Module::Runtime prerequisite and improved error messages
+      when no backends were loaded.
+
 v1.2.1    2016-10-24 20:56:51-04:00 America/New_York
 
     [Fixed]
